# odos-router-v3

./: .gitignore  README.md  brownie-config.yaml  foundry.toml  package-lock.json  pyproject.toml
tests/: test_admin_functions.py  test_swap.py  test_swap_multi.py
tests/test_lib/: encode_compact.py  permit2.py
